--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,21 @@
+* {
+  margin: 3px;
+  padding: 3px;
+}
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+p {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+form, button {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .App-logo {
@@ -35,4 +51,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.weatherColumn {
+  width: 60%
+}
+
+.chatColumn {
+  width:40%
 }
